--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,8 @@ header {
 
 header img
 {
-	min-height: 100%;
+	width: 75%; 
+	//max-width: 514px;
 	border: 2px solid black;
 	border-radius: 20px;
 }
@@ -31,13 +32,6 @@ header img
 .row
 {
 	margin: 0;
-}
-
-nav p
-{
-	margin-left: 20%;
-	font-weight: bold;
-	texte-align: center;
 }
 
 section
