--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,4 @@
 
-	//min-height: 100%;
-
-
-
 .container {
 	min-height: 100%;
 	width:100%;
@@ -17,7 +13,7 @@
 
 .categories
 {
-		background-color: #38c3ec;
+	background-color: #38c3ec;
 }
 .menu
 {
@@ -33,6 +29,7 @@ header {
 img
 {
 	width: 25%; 
+	max-width: 200px;
 	border: 2px solid black;
 	border-radius: 20px;
 }
