--- a/style.css
+++ b/style.css
@@ -1,13 +1,6 @@
-html, body {
-	min-height: 100%;
-	background-color: #38c3ec;
-}
 
 .container {
-	min-height: 100%;
-	width:100%;
-	margin:0;
-	padding:0;
+
 }
 
 .presentation
@@ -15,6 +8,10 @@ html, body {
 	background-color: #D1B500;
 }
 
+.categories
+{
+	background-color: #38c3ec;
+}
 .menu
 {
 	font-family: cursive;
@@ -26,9 +23,9 @@ header {
 	text-align: center;
 }
 
-img
+.photoProfil
 {
-	width: 100%; 
+	//max-width: 50px;
 	border: 2px solid black;
 	border-radius: 20px;
 }
@@ -37,7 +34,7 @@ img
 {
 	margin: 0;
 }
-
+/*
 section
 {
 	height:100%;
@@ -51,6 +48,7 @@ section
 	padding-bottom: 100%;
 	min-height: 100%;
 }
+*/
 
 article
 {
