--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@
 
 header {
 	margin-top: 10px;
-	margin-bottom: 10px;
+//	margin-bottom: 10px;
 	text-align: center;
 }
 
 .photoProfil
 {
-	max-width: 33%;
+	max-width: 50%;
 	border: 2px solid black;
 	border-radius: 20px;
 }
@@ -57,8 +57,8 @@ article
 	border: 1px solid black;
 	border-radius: 15px;
 	background-color: #E6F0F2;
-	margin-bottom: 15px;
-	padding: 10px;
+//	margin-bottom: 15px;
+//padding: 10px;
 }
 
 h3
