--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ header {
 	margin-top: 10px;
 //	margin-bottom: 10px;
 	text-align: center;
-	padding :10px;
+	padding-left :10px;
+	padding-right :10px;
 	
 }
 
