--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ body
 {
 	border: 1px solid black;
 	border-radius: 5px;
-	background-color: #FAF7E0;
+	background-color: #E6F0F2;
 	padding:10px;
 }
 
 .categories
 {
-	background-color: #38c3ec;
+
+
 }
 .menu
 {
