--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ body
 	background-color: #E6F0F2;
 	padding:10px;
 	font-family: cursive;
-	text-align: center;
 }
 
+.menu h3
+{
+	text-align: center;
+}
 .categories
 {
 
