--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body
 	font-family: cursive;
 }
 
+.menu ul
+{
+	list-style-type: none;
+	line-height:3em;
+}
+
 .menu h3
 {
 	text-align: center;
@@ -39,21 +45,6 @@ body
 {
 	margin: 0;
 }
-/*
-section
-{
-	height:100%;
-	min-height: 100%;
-	background-color: #FAFAFA;
-	padding-top: 3%;
-	padding-left: 5%;
-	padding-right: 5%;
-	border-left: 2px solid black;
-	border-right: 2px solid black;
-	padding-bottom: 100%;
-	min-height: 100%;
-}
-*/
 
 article
 {
