--- a/style.css
+++ b/style.css
@@ -24,18 +24,19 @@ ul
 {
 	text-align: center;
 }
-
+/*
 li img
 {
 	width : 5%;
 	margin-right: 10px;
 }
-
+*/
 
 a:hover
 {
-	background-position: -30px 0;
-	background: url('img/fleche.png') no-repeat;
+	background: url('img/fleche.png') no-repeat 20px;
+	margin-left: -50px;
+	padding-left: 50px;
 }
 
 .photoProfil
