--- a/style.css
+++ b/style.css
@@ -24,19 +24,14 @@ ul
 {
 	text-align: center;
 }
-/*
-li img
-{
-	width : 5%;
-	margin-right: 10px;
-}
-*/
 
 a:hover
 {
 	background: url('img/fleche.png') no-repeat 20px;
 	margin-left: -50px;
 	padding-left: 50px;
+	text-decoration: none;
+	color: black;
 }
 
 .photoProfil
