--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@ body
 			text-decoration: none;
 			color: black;
 		}
+			.menu .cliqué
+			{
+				background: url('img/fleche.png') no-repeat 20px;
+				margin-left: -50px;
+				padding-left: 50px;
+				text-decoration: none;
+				color: black;
+			}
 
 ul
 {
