--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body
 {
 	margin-top:5px;
 	//background-color: #F9E66B;
-	background-color: #FFCC66;
+	//background-color: #FFCC66;
+	background-color: rgb(70, 87, 129);
 }
 
 .menu
