--- a/style.css
+++ b/style.css
@@ -75,11 +75,16 @@ body
     margin-right: auto;
 }
 
-.aCacher ul
+.aCacher h3
 {
-	line-height:3em;
-	margin-left: 10px;
+	margin-left: 3%;
 }
+
+	.aCacher ul
+	{
+		line-height:3em;
+		margin-left: 10px;
+	}
 
 .sujet
 {
