--- a/style.css
+++ b/style.css
@@ -80,11 +80,16 @@ body
 	margin-left: 3%;
 }
 
-	.aCacher ul
+	.aCacher ul .sujet
 	{
 		line-height:3em;
-		margin-left: 10px;
+		padding-left: 4%;
 	}
+		.aCacher ul
+		{
+			line-height:3em;
+			padding-left: 8%;
+		}
 
 .sujet
 {
