--- a/style.css
+++ b/style.css
@@ -88,11 +88,13 @@ body
 		{
 			line-height:3em;
 			padding-left: 8%;
+			margin-left: 8%;
 		}
 			.aCacher ville
 			{
 				line-height:3em;
 				padding-left: 8%;
+				margin-left: 8%;
 			}
 
 
