--- a/style.css
+++ b/style.css
@@ -86,18 +86,11 @@ body
 	}
 		.aCacher lieu
 		{
-			border-left:8%;
-			display: block;
-			line-height:3em;
-			position: relative;
-			left: 8%;
+			padding-left: 8%;
 		}
 			.aCacher ville
 			{
-				display: block;
-				line-height:3em;
-				position: relative;
-				left: 8%;
+				padding-left: 8%;
 			}
 
 
