--- a/style.css
+++ b/style.css
@@ -84,11 +84,11 @@ body
 		line-height:3em;
 		padding-left: 4%;
 	}
-		.aCacher lieu
+		.aCacher .lieu
 		{
 			padding-left: 20px;
 		}
-			.aCacher ville
+			.aCacher .ville
 			{
 				padding-left: 8%;
 			}
