--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body
 				{
 					padding-bottom:15px;
 				}
-					.aCacher.sujet
+					.sujet
 					{
 						font-weight: bold;
 						maring-bottom: 10px;
