--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-
 body
 {
-	margin-top:5px;
+	margin-top: 5px;
 	//background-color: #F9E66B;
-	background-color: #465781 ;
+	background-color: #465781;
 }
 
 .menu
@@ -11,45 +10,47 @@ body
 	border: 3px solid black;
 	border-radius: 2px;
 	background-color: #E6F0F2;
-	padding:10px;
+	padding: 10px;
 	font-family: cursive;
 }
-	
-	.menu h3
-	{
-		text-align: center;
-	}
-		
-		.menu a:hover
-		{
-			background: url('img/fleche.png') no-repeat 20px;
-			margin-left: -50px;
-			padding-left: 50px;
-			text-decoration: none;
-			color: black;
-		}
-		
-		.menu a:focus
-		{
-			background: url('img/fleche.png') no-repeat 20px;
-			margin-left: -50px;
-			padding-left: 50px;
-			text-decoration: none;
-			color: black;
-		}
-			.menu .cliqué
-			{
-				background: url('img/fleche.png') no-repeat 20px;
-				margin-left: -50px;
-				padding-left: 50px;
-				text-decoration: none;
-				color: black;
-			}
+
+.menu h3
+{
+	text-align: center;
+}
+
+.menu a:hover
+{
+	background: url('img/fleche.png') no-repeat 20px;
+	margin-left: -50px;
+	padding-left: 50px;
+	text-decoration: none;
+	color: black;
+}
+
+.menu a:focus
+{
+	background: url('img/fleche.png') no-repeat 20px;
+	margin-left: -50px;
+	padding-left: 50px;
+	text-decoration: none;
+	color: black;
+}
+
+.menu .cliqué
+{
+	background: url('img/fleche.png') no-repeat 20px;
+	margin-left: -50px;
+	padding-left: 50px;
+	text-decoration: none;
+	color: black;
+}
 
 .menu ul
 {
 	list-style-type: none;
-	line-height:3em;
+	line-height: 3em;
+	font-weight: bold;
 }
 
 #contact img
@@ -58,10 +59,11 @@ body
 	margin: 20px;
 }
 
-.iconeContact {
-  display: inline-block;
-  width: 32%;
-  text-align: center;
+.iconeContact
+{
+	display: inline-block;
+	width: 32%;
+	text-align: center;
 }
 
 .photoProfil
@@ -72,7 +74,7 @@ body
 	border-radius: 2px;
 	display: block;
 	margin-left: auto;
-    margin-right: auto;
+	margin-right: auto;
 }
 
 .aCacher h3
@@ -80,24 +82,28 @@ body
 	margin-left: 3%;
 	margin-bottom: 30px;
 }
-	.aCacher ul
-	{
-		//line-height:3em;
-		padding-left: 4%;
-	}
-		.aCacher .lieu
-		{
-			padding-left: 2%;
-		}
-			.aCacher .ville
-			{
-				padding-left: 2%;
-			}
-				.aCacher li
-				{
-					padding-bottom:15px;
-				}
-					
+
+.aCacher ul
+{
+	//line-height:3em;
+	padding-left: 4%;
+}
+
+.aCacher .lieu
+{
+	padding-left: 2%;
+}
+
+.aCacher .ville
+{
+	padding-left: 2%;
+}
+
+.aCacher li
+{
+	padding-bottom: 15px;
+}
+
 .sujet
 {
 	font-weight: bold;
@@ -106,8 +112,8 @@ body
 
 .lieu
 {
-  font-size: 12px;
-  font-style: italic;
+	font-size: 12px;
+	font-style: italic;
 }
 
 #contact
@@ -116,10 +122,10 @@ body
 	height: 300px;
 }
 
-	#contact h3
-	{
-		padding-bottom: 5%;
-	}
+#contact h3
+{
+	padding-bottom: 5%;
+}
 
 .row
 {
@@ -131,10 +137,10 @@ article
 	border: 3px solid black;
 	border-radius: 2px;
 	background-color: #E6F0F2;
-	padding:10px;
+	padding: 10px;
 }
 
 h3
 {
-	font-family:cursive;
+	font-family: cursive;
 }
