--- a/style.css
+++ b/style.css
@@ -96,36 +96,36 @@ p
 	margin-right: auto;
 }
 
-.aCacher
+.categories article
 {
-	margin-bottom: 20px;
+		margin-bottom: 20px;
 }
 
-.aCacher h3
-{
-	margin-left: 3%;
-	margin-bottom: 30px;
-}
+	.categories h3
+	{
+		margin-left: 3%;
+		margin-bottom: 30px;
+	}
 
-.aCacher ul
-{
-	padding-left: 4%;
-}
+	.categories ul
+	{
+		padding-left: 4%;
+	}
 
-.aCacher .lieu
-{
-	padding-left: 2%;
-}
+	.categories .lieu
+	{
+		padding-left: 2%;
+	}
 
-.aCacher .ville
-{
-	padding-left: 2%;
-}
+	.categories .ville
+	{
+		padding-left: 2%;
+	}
 
-.aCacher li
-{
-	padding-bottom: 15px;
-}
+	.categories li
+	{
+		padding-bottom: 15px;
+	}
 
 .sujet
 {
@@ -198,12 +198,7 @@ h3
 	position: relative;
 	left: 30%;
 }
-/*
-.categories
-{
-		padding-top: 30%;
-}
-*/
+
 .container
 {
 		width:100%;
