--- a/style.css
+++ b/style.css
@@ -249,3 +249,19 @@ header
 {
 	display : none;
 }
+
+#menuMobile
+{
+	display : none;
+	position: fixed;
+	left: -215px;
+	z-index: 10;
+	width: auto;
+	padding-left: 0;
+	height: 100%;
+}
+
+#menuMobile ul
+{
+	padding-left: 5%;
+}
