--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,8 @@
-@media screen and (max-width: 499px)
+@media screen and (max-width: 1382px)
 {
-      em, span
+      .largeurInfo
       {
-            font-size: 100%;
+            width: 100%;
       }
 }
 
@@ -19,84 +19,20 @@
       }
 }
 
-@media screen and (max-width: 458px)
-{
-      em, span, p
-      {
-            font-size: 96%;
-      }
-}
-
-@media screen and (max-width: 400px)
-{
-      em, span
-      {
-            font-size: 80%;
-      }
-}
-
-@media screen and (max-width: 767px)
-{
-      #photoProfil
-      {
-            max-height: 67%;
-      }
-
-      #espaceImage
-      {
-            height: 25%;
-      }
-
-      #menuMobile hr
-      {
-           margin-top: 3%;
-           margin-bottom: 3%;
-      }
-
-}
-
-@media screen and (max-width: 1382px)
-{
-      .largeurInfo
-      {
-            width: 100%;
-      }
-}
-
-@media screen and (max-width: 1111px)
-{
-      .longMot
-      {
-            font-size: 87%;
-      }
-}
-
-@media screen and (max-height: 658px)
-{
-      #container
-      {
-            height: 120%;
-      }
-}
-
-
-@media screen and (max-height: 700px)
-{
-      #conteneurEspaceLien
-      {
-            height: 80%;
-      }
-
-      #container
-      {
-            min-height: 850px;
-      }
-}
-
 @media screen and (max-height: 600px)
 {
-      #conteneurEspaceLien
+      #espaceLienMobile
       {
-            height: 70%;
+            max-height: 250px;
+            overflow-y: scroll;
+      }
+}
+
+@media screen and (max-height: 450px)
+{
+      #espaceLienMobile
+      {
+            max-height: 200px;
+            overflow-y: scroll;
       }
 }
