--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,14 @@
+@media screen and (min-width: 1700px)
+{
+      #container
+      {
+            width: 66%;
+            margin: 5% 20% 20%;
+      }
+}
+
+
+
 @media screen and (max-width: 1382px)
 {
       .largeurInfo
