--- a/style.css
+++ b/style.css
@@ -114,8 +114,7 @@ body
 
 .transition {
     -webkit-transform: scale(2);
-    -moz-transform: scale(2);
-    -o-transform: scale(2);
+    -moz-transform: scale(2);    -o-transform: scale(2);
     transform: scale(2);
 }
 
@@ -211,4 +210,9 @@ span
 .description
 {
     padding-left: 9%;
+}
+
+#introduction
+{
+    text-align: justify;
 }
