--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,8 +58,8 @@
             overflow-y: scroll;
       }
 
-      .active
+      body
       {
-            font-size: 10px;
+            font-size: 60%;
       }
 }
