--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,6 +47,11 @@
       {
             font-size: 70%;
       }
+
+      .listeBord
+      {
+            padding-left: 0%;
+      }
 }
 
 @media screen and (max-height: 600px)
