--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body
       margin-left: 5%;
       margin-right: 5%;
       margin-bottom: 5%;
+      min-width: 413px;
       display: flex;
 }
 
@@ -213,4 +214,29 @@ span
 p
 {
     text-align: justify;
+}
+
+.titre
+{
+    padding: 7px 15px;
+    color: #6F6868;
+    font-weight: 400;
+    font-style: normal;
+    border: 1px solid #9C9C9C;
+    margin-right: 0px;
+    margin-bottom: 20px;
+    width: 118px;
+}
+
+.detailProfil
+{
+    padding: 7px 15px;
+    color: black;
+    font-weight: 400;
+    font-style: normal;
+    border: 1px solid #9C9C9C;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    background: rgb(213, 209, 209);
+    width: 221px;
 }
