--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,20 +13,29 @@
             display: none;
       }
 
-      #menuMobile, #showMenuLien
+      #menuMobile, #colonneIconeMenu
       {
             display: block;
+            padding: 0px;
       }
 
       #showMenuLien
       {
             float: left;
-            width: 10%;
       }
 
       #showMenuImage
       {
             width :100%;
+      }
+
+      #container
+      {
+            width: 100%;
+            margin-top: 5%;
+            margin-bottom: 20%;
+            margin-left: 0%;
+            margin-right: 5%;
       }
 }
 
@@ -41,11 +50,6 @@
       {
             padding-left: 0%;
       }
-      
-/*      .logo
-      {
-            display: none;
-      }*/
 }
 
 @media screen and (max-height: 600px)
