--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 
 <div id="container" class="min-width">
 	<app-formation class="section"></app-formation>
-	
-	<app-professionnal-exp class="section"></app-professionnal-exp>
+	<mat-divider></mat-divider>
+	<div class="peer">
+		<app-professionnal-exp class="section"></app-professionnal-exp>
+	</div>
 </div>
