--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -1,43 +1,40 @@
-<mat-card class="example-card">
+<!-- <mat-card class="example-card">
 	<mat-card-header>
 		<div mat-card-avatar class="example-header-image"></div>
 		<mat-card-title class="mat-display-1">Formation</mat-card-title>
-		<!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
 	</mat-card-header>
 	<mat-card-content>
-		<ol>
-			<li class="saint-michel">
-				2017-2018
-				<aside>Point de RV</aside>
-			</li>
-			<li class="cityhall">
-				2016-2017
-				<aside>Départ Bus</aside>
-			</li>
-			<li class="opera">
-				2015-2016
-				<aside>Opéra Garnier</aside>
-			</li>
-			<li class="catacombes">
-				2014-2015
-				<aside>Chiens interdits</aside>
-			</li>
-			<li class="grands-boulevards">
-				2013-2014
-				<aside>Musée Grévin</aside>
-			</li>
-		</ol>
-
 		<ul>
-			<li>
+			<li class="accordion formationSubway">
 				<div class="section-title">
-					<h2>Section 1</h2>
+					<ol>
+						<li class="saint-michel" (click)="openAccordion()">
+							2017-2018
+							<aside>Point de RV</aside>
+						</li>
+						<li class="cityhall" (click)="openAccordion()">
+							2016-2017
+							<aside>Départ Bus</aside>
+						</li>
+						<li class="opera">
+							2015-2016
+							<aside>Opéra Garnier</aside>
+						</li>
+						<li class="catacombes">
+							2014-2015
+							<aside>Chiens interdits</aside>
+						</li>
+						<li class="grands-boulevards">
+							2013-2014
+							<aside>Musée Grévin</aside>
+						</li>
+					</ol>
 				</div>
 				<div class="section-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit voluptatum temporibus dicta reprehenderit tempore quisquam consequuntur porro omnis laboriosam praesentium at et sapiente, provident sit! Suscipit recusandae, ab ratione dignissimos.</p>
 				</div>
 			</li>
-			<li class="active">
+			<li class="accordion formationSubway" [ngClass]="{'active' : accordionOpened}">
 				<div class="section-title">
 					<h2>Section 2</h2>
 				</div>
@@ -47,8 +44,37 @@
 			</li>
 		</ul>
 	</mat-card-content>
-	<!-- <mat-card-actions>
-		<button mat-button>LIKE</button>
-		<button mat-button>SHARE</button>
-	</mat-card-actions> -->
-</mat-card>
+</mat-card> -->
+
+<h1 class="mat-display-1">FORMATION</h1>
+<ul>
+	<li class="accordion formationSubway">
+		<div class="section-title">
+			<ol>
+				<li class="saint-michel" (click)="openAccordion('hello')">
+					2017-2018
+				</li>
+				<li class="cityhall" (click)="openAccordion('bye')">
+					2016-2017
+				</li>
+				<li class="opera" (click)="openAccordion('test')">
+					2015-2016
+				</li>
+				<li class="catacombes" (click)="openAccordion('aaaah')">
+					2014-2015
+				</li>
+				<li class="grands-boulevards" (click)="openAccordion('bbbbb')">
+					2013-2014
+				</li>
+			</ol>
+		</div>
+	</li>
+	<li class="accordion formationSubway" [ngClass]="{'active' : accordionOpened}">
+		<div class="section-title">
+			<h2>Section 2</h2>
+		</div>
+		<div class="section-content">
+			<p>{{message}}</p>
+		</div>
+	</li>
+</ul>
