--- a/src/app/professionnal-exp/professionnal-exp.component.html
+++ b/src/app/professionnal-exp/professionnal-exp.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<!-- <mat-card class="example-card">
 	<mat-card-header>
 		<div mat-card-avatar class="example-header-image"></div>
 		<mat-card-title>Shiba Inu</mat-card-title>
@@ -15,4 +15,10 @@
 		<button mat-button>LIKE</button>
 		<button mat-button>SHARE</button>
 	</mat-card-actions>
-</mat-card>
+</mat-card> -->
+<h1 class="mat-display-1">EXPERIENCES PROFESSIONNELLES</h1>
+<p class="mat-h4">
+	The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+	A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+	bred for hunting.
+</p>
